--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -9,4 +9,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/BattleGround.BattleGround
 GameDefaultMap=/Game/BattleGround.BattleGround
+GlobalDefaultGameMode=/Game/MyBattleTankGameModeBase_BP.MyBattleTankGameModeBase_BP_C
 
