Aiming through crosshair on a screen, log coordinates on console

--- a/BattleTank/Config/DefaultGame.ini
+++ b/BattleTank/Config/DefaultGame.ini
@@ -1,2 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=75C877B641788190E03685A11ACAAA54
+CompanyName=Igor Berus
+CompanyDistinguishedName=IgoBer
+CopyrightNotice=Copyright Igor Berus 2017
+
