Deleted starter content

--- a/BattleTank/.gitignore
+++ b/BattleTank/.gitignore
@@ -1,6 +1,7 @@
 # Visual Studio 2015 user specific files
 .vs/
 *.VC.db
+BattleTank.VC.VC.opendb
 
 # Compiled Object files
 *.slo
@@ -49,9 +50,6 @@ Binaries/*
 
 # Builds
 Build/*
-
-# Starter Content
-Content/StarterContent/*
 
 # Don't ignore icon files in Build
 !Build/**/*.ico
