--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -8,6 +8,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/_Levels/BattleGround.BattleGround
-GameDefaultMap=/Game/_Levels/MainMenu.MainMenu
+GameDefaultMap=/Game/_Levels/BattleGround.BattleGround
 GlobalDefaultGameMode=/Game/Blueprints/MyBattleTankGameModeBase_BP.MyBattleTankGameModeBase_BP_C
 
