--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -42,6 +42,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="Quit",Key=Gamepad_Special_Left,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Fire",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Fire",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Swap Cam",Key=V,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="AimAzimuth",Key=MouseX,Scale=1.000000)
 +AxisMappings=(AxisName="AimAzimuth",Key=Gamepad_RightX,Scale=1.000000)
 +AxisMappings=(AxisName="AimElevation",Key=MouseY,Scale=1.000000)
@@ -52,6 +53,10 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="Turn Right",Key=Gamepad_LeftX,Scale=1.000000)
 +AxisMappings=(AxisName="Turn Right",Key=Right,Scale=1.000000)
 +AxisMappings=(AxisName="Turn Left",Key=Left,Scale=1.000000)
++AxisMappings=(AxisName="Move Forward",Key=W,Scale=1.000000)
++AxisMappings=(AxisName="Move Backward",Key=S,Scale=1.000000)
++AxisMappings=(AxisName="Turn Right",Key=D,Scale=1.000000)
++AxisMappings=(AxisName="Turn Left",Key=A,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
